# variety

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  genproj.bat  premake5.lua  run.bat
variety/: imgui.ini
variety/shaders/: shader.frag.glsl  shader.vert.glsl
variety/src/: app.cpp  app.h  camera.cpp  camera.h  dual_contour.cpp  dual_contour.h  main.cpp  meshbuilder.cpp  meshbuilder.h  settings.cpp  settings.h
variety/src/gl/: attributes.cpp  attributes.h  buffer.h  gl.cpp  gl.h  misc.cpp  misc.h  program.cpp  program.h  vertex.cpp  vertex.h  vertex_array.cpp  vertex_array.h
